examples/src/invalid/runTest03.alice

The looking-glass hatta ()
opened 
  x was a number of 0.
  arr had x number.
  opened
  closed
closed
